Let modal view controllers become first responder when presented.

By becoming first responder, they become the recipient of key presses
and prevent the system to automatically focus the omnibox by calling
-[UIKeyboardImpl handleTabWithShift:beforePublicKeyCommands:] when the
tab key is pressed.

BUG=676993
R=gambard@chromium.org

Review-Url: https://codereview.chromium.org/2718683002
Cr-Commit-Position: refs/heads/master@{#452835}

Former-commit-id: a4a59720181d50024b86da5937cc7ae459f725a6