ios/chrome/browser/ui/bookmarks/bookmark_navigation_controller.mm
@@ -28,4 +28,10 @@
   return NO;
 }
 
+#pragma mark - UIResponder
+
+- (BOOL)canBecomeFirstResponder {
+  return YES;
+}
+
 @end
