ios/chrome/browser/ui/settings/settings_navigation_controller.mm
@@ -656,4 +656,10 @@ initWithRootViewController:(UIViewController*)rootViewController
   return [NSValue valueWithPointer:controller];
 }
 
+#pragma mark - UIResponder
+
+- (BOOL)canBecomeFirstResponder {
+  return YES;
+}
+
 @end
